--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css">
     <title>MCAST - Home</title>
 </head>
+
 <body>
-    
     <header>
         <div class="top-bar">
             <button class="menu-toggle">≡</button>
@@ -18,6 +18,17 @@
             <button class="search">⌕</button>
             
         </div>
+
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="institutes.html">Institutes</a></li>
+                <li><a href="courses.html">Browse Courses</a></li>
+                <li><a href="how2apply.html">How to Apply</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+
+        </nav>
 
     </header>
 
