Hero/Call to action css
Added CSS for the hero image that will be put later, however text has been done.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 
     </header>
 
-
+<section class="hero">
+    <h1>Explore your future with MCAST!</h1>
+    <p>Hands-on Experience - Professional Networking - Modern Facilities</p>
+</section>
 
 </body>
 </html>
