Footer & more buttons
Added a footer, and more buttons on main page. Also a test image to try see how the page would look, and tried fixing it accordingly.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,30 @@
 <section class="hero">
     <h1>Explore your future with MCAST!</h1>
     <p>Hands-on Experience - Professional Networking - Modern Facilities</p>
+
+<nav class="main-nav">
+    <div class="hero-buttons">
+    <a class="btn" href="courses.html">Browse Courses</a>
+    <a class="btn" href="contact.html">Contact Us</a>
+    <a class="btn" href="how2apply.html">How to Apply</a>
+</nav>
+</div>
 </section>
+
+
+<section class="image-grid">
+    <div class="grid-img">
+        <img src="Images\BECOBANNER.png" alt="Green Commitment Header">
+    </div>
+
+</section>
+
+<footer class="site-footer">
+    <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
+    <p>information@mcast.edu.mt</p>
+    <p>+356 2398 7100</p>
+    <p>2026 MCAST Website - jonfarr </p>
+</footer>
 
 </body>
 </html>
