Added Headers + Footers, & Contact Page
Added headers/footers on all pages, contact page with a working map, and contact form.

--- a/apply.html
+++ b/apply.html
@@ -6,7 +6,7 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <title>MCAST - Course List</title>
+    <title>MCAST - Applying with us</title>
 </head>
 <body>
     <header>
@@ -38,7 +38,5 @@
     <p>+356 2398 7100</p>
     <p>2026 MCAST Website</p>
     </footer>
-    
-
 </body>
 </html>
