--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>MCAST - Home</title>
 </head>
 
@@ -21,17 +22,19 @@
 
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="institutes.html">Institutes</a></li>
                 <li><a href="courses.html">Browse Courses</a></li>
-                <li><a href="how2apply.html">How to Apply</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="apply.html">How to Apply</a></li>
+                <li><a href="contact.html" class="active">Contact Us</a></li>
             </ul>
 
         </nav>
 
     </header>
 
+<section><img src="Images\BECOBANNER.png" alt="Green Commitment Header"></section> 
+    
 <section class="hero">
     <h1>Explore your future with MCAST!</h1>
     <p>Hands-on Experience - Professional Networking - Modern Facilities</p>
@@ -40,24 +43,26 @@
     <div class="hero-buttons">
     <a class="btn" href="courses.html">Browse Courses</a>
     <a class="btn" href="contact.html">Contact Us</a>
-    <a class="btn" href="how2apply.html">How to Apply</a>
+    <a class="btn" href="apply.html">How to Apply</a>
 </nav>
 </div>
 </section>
 
+<div class="img-grid">
+    <img src="Images\Victoria-Ebejer.jpg" alt="">
+    <img src="Images\thomas-buhagiar1.jpg" alt="">
+    <img src="Images\Karen-Attard-4.jpg" alt="">
+    <img src="Images\Darren-Busuttil-scaled.jpeg" alt="">
+    <img src="Images\Artboard-11.jpg" alt="">
+    <img src="Images\adrain-xiberras-4.jpg" alt="">
+</div>
 
-<section class="image-grid">
-    <div class="grid-img">
-        <img src="Images\BECOBANNER.png" alt="Green Commitment Header">
-    </div>
-
-</section>
 
 <footer class="site-footer">
     <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
     <p>information@mcast.edu.mt</p>
     <p>+356 2398 7100</p>
-    <p>2026 MCAST Website - jonfarr </p>
+    <p>2026 MCAST Website</p>
 </footer>
 
 </body>
