--- a/institutes.html
+++ b/institutes.html
@@ -3,9 +3,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>MCAST - Institutes</title>
 </head>
 <body>
-    
+    <header>
+        <div class="top-bar">
+            <button class="menu-toggle">≡</button>
+
+            <img src="Images\New_Logo4-1.png" alt="MCAST Logo" class="logo">
+
+            <button class="search">⌕</button>
+            
+        </div>
+
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="institutes.html">Institutes</a></li>
+                <li><a href="courses.html">Browse Courses</a></li>
+                <li><a href="apply.html">How to Apply</a></li>
+                <li><a href="contact.html" class="active">Contact Us</a></li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <footer class="site-footer">
+    <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
+    <p>information@mcast.edu.mt</p>
+    <p>+356 2398 7100</p>
+    <p>2026 MCAST Website</p>
+    </footer>
 </body>
 </html>
