--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,117 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
     <title>MCAST - Get in Touch</title>
 </head>
 <body>
-    
+    <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
+    <title>Contact Form</title>
+</head>
+<body>
+
+    <header>
+        <div class="top-bar">
+            <button class="menu-toggle">≡</button>
+
+            <img src="Images\New_Logo4-1.png" alt="MCAST Logo" class="logo">
+
+            <button class="search">⌕</button>
+            
+        </div>
+
+        <nav class="main-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="institutes.html">Institutes</a></li>
+                <li><a href="courses.html">Browse Courses</a></li>
+                <li><a href="apply.html">How to Apply</a></li>
+                <li><a href="contact.html" class="active">Contact Us</a></li>
+            </ul>
+
+        </nav>
+
+    </header>
+
+    <section class="contact-page">
+
+    <h1>Contact Us</h1>
+
+    <div class="contact-layout">
+
+    <div class="map-box">
+        <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3232.8866910509264!2d14.503948676386708!3d35.87629351923304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x130e5ac2d87c4891%3A0x48ee141582b02a26!2sMCAST!5e0!3m2!1sen!2smt!4v1768513662986!5m2!1sen!2smt" 
+        width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>"
+    </div>
+
+
+    <div class="contact-details">
+        <h2>MCAST Main Campus</h2>
+
+        <p><strong>Address:</strong><br>
+        Triq Kordin, Paola, Malta</p>
+
+        <p><strong>Phone:</strong><br>
+        +356 2398 7100</p>
+
+        <p><strong>Email:</strong><br>
+        info@mcast.edu.mt</p>
+
+        <p><strong>Opening Hours:</strong><br>
+        Mon - Fri: 8:00 - 16:00</p>
+    </div>
+
+    </div>
+
+</section>
+
+
+    <section class="contact-form">
+    <form action="mailto:info@mcast.com" method="post" enctype="text/plain" class="contact-form">
+
+        <div class="input-section">
+            <label for="input-name">Name:</label>
+            <input type="text" name="name" id="input-name"
+                placeholder="Please input name" required>
+        </div>
+
+        <div class="input-section">
+            <label for="input-email">Email:</label>
+            <input type="email" name="email" id="input-email"
+                placeholder="Please input email address" required>
+        </div>
+
+        <div class="input-section">
+            <label for="input-message">Message:</label>
+            <textarea name="message" id="input-message"
+                cols="30" rows="10"
+                placeholder="Please input message here"
+                required minlength="20"></textarea>
+        </div>
+
+        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="clear" class="btn btn-secondary">Clear</button>
+
+    </form>
+</section>
+
+<footer class="site-footer">
+    <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
+    <p>information@mcast.edu.mt</p>
+    <p>+356 2398 7100</p>
+    <p>2026 MCAST Website</p>
+</footer>
+
+</body>
+
 </body>
 </html>
