Project Finalization & Device Responsiveness
- Added all content for the 5 pages
- Added Tablet/Mobile Responsiveness

--- a/apply.html
+++ b/apply.html
@@ -24,13 +24,81 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="institutes.html">Institutes</a></li>
                 <li><a href="courses.html">Browse Courses</a></li>
-                <li><a href="apply.html">How to Apply</a></li>
-                <li><a href="contact.html" class="active">Contact Us</a></li>
+                <li><a href="apply.html"class="active">How to Apply</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
 
         </nav>
 
     </header>
+
+    <main>
+
+<section class="apply-info">
+
+    <p>
+        Applicants must fill in the official MCAST Online Application Form:
+        <a href="https://mcast.classter.com/actions/registration" target="_blank" rel="noopener">
+        https://mcast.classter.com/actions/registration
+        </a>
+    </p>
+
+    <p>
+        Applications for <strong>Full Time Courses</strong> are received according to the relevant Time Windows as published through
+        <a href="https://mcast.edu.mt/application-online-ft-mcast-courses/" target="_blank" rel="noopener">
+        https://mcast.edu.mt/application-online-ft-mcast-courses/
+        </a>
+        Applications submitted outside the set Full-Time time windows and not respecting the parameters
+        which are specific to the Full-Time time window (as clearly explained through the mentioned link),
+        cannot be accepted and will not be processed.
+    </p>
+
+    <p>
+        Online Applications for <strong>Part Time</strong>, <strong>Training for Industry</strong>, <strong>Non-Full-Time Prospectus courses</strong> (or similar) are ongoing and according to time windows for the specific Part-Time courses as published through the MG2i website and as communicated by MG2i through a guide with screenshots intended to help with the online application.
+    </p>
+
+    <p>
+        In the MCAST website section <strong>How to Apply Online</strong>
+        <a href="https://mcast.edu.mt/how-to-apply-online-2/" target="_blank" rel="noopener">
+        https://mcast.edu.mt/how-to-apply-online-2/
+        </a>one will find guides and resources intended to further facilitate online applications.
+    </p>
+
+    <p>
+        All residents in Malta bearing a Maltese ID Document are expected to submit their online application after creating their MCAST CMIS account/profile (combined process at one go) using their active and valid eID credentials, which may be obtained from the Identità Agency. Only in exceptional circumstances where it is clearly evidenced that the applicant is not entitled to an eID, will a different channel of application be utilised, upon clear guidance by the MCAST Admissionsand Records Department (ARD).
+    </p>
+
+    <p>
+        The Online Application on the MCAST Admissions Portal is made up of the following online pages:
+    </p>
+
+    <ol>
+        <li>
+        Personal details as pushed from the applicant's Maltese eID, being the only source of validation. This first page is totally dependent on the Identità Agency rather than within MCAST's control.
+        </li>
+        <li>
+        A section which allows applicants to upload clear and crisp scans of all certificates and qualification documents (full pages thereof), as required for the vetting process.
+        </li>
+        <li>
+        General Data Protection Regulations (GDPR) page. This must be completed attentively, without which the application cannot be submitted.
+        </li>
+        <li>
+        Choosing the course title one would be applying for.
+        </li>
+    </ol>
+
+    <p>
+        The creation of one's account/profile on MCAST CMIS using eID is done only once, at the very first time the applicant submits an application. Once the applicant's account/profile is set up and validated, future applications become much simpler and will generally only require confirmation of GDPR consents and completion of the final application page.
+        </p>
+
+        <p class="last-updated">
+        <em>Last updated: 07 July 2024</em>
+        </p>
+
+    </section>
+
+</main>
+
 
     <footer class="site-footer">
     <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
