--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
 
         <nav class="main-nav">
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html"class="active">Home</a></li>
                 <li><a href="institutes.html">Institutes</a></li>
                 <li><a href="courses.html">Browse Courses</a></li>
                 <li><a href="apply.html">How to Apply</a></li>
-                <li><a href="contact.html" class="active">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
 
         </nav>
@@ -49,13 +49,44 @@
 </section>
 
 <div class="img-grid">
-    <img src="Images\Victoria-Ebejer.jpg" alt="">
-    <img src="Images\thomas-buhagiar1.jpg" alt="">
-    <img src="Images\Karen-Attard-4.jpg" alt="">
-    <img src="Images\Darren-Busuttil-scaled.jpeg" alt="">
-    <img src="Images\Artboard-11.jpg" alt="">
-    <img src="Images\adrain-xiberras-4.jpg" alt="">
+    <img src="Images\Victoria-Ebejer.jpg" alt="Victoria Ebejet, Hairstylist">
+    <img src="Images\thomas-buhagiar1.jpg" alt="Thomas Buhagiar, Pilot">
+    <img src="Images\Karen-Attard-4.jpg" alt="Karen Attard, Scientist">
+    <img src="Images\Darren-Busuttil-scaled.jpeg" alt="Darren Busuttil, Technician">
+    <img src="Images\Artboard-11.jpg" alt="Animal Doctor Trainee">
+    <img src="Images\adrain-xiberras-4.jpg" alt="Adrian Xiberras, Plumber">
 </div>
+
+<section class="why-mcast">
+    <div class="why-title">
+    WHY CHOOSE MCAST?
+    </div>
+
+    <div class="why-content">
+    The MCAST experience focuses on hands-on learning supported by strong industry connections and modern,
+    well-equipped facilities that prepare students for real-world careers.
+</div>
+
+</section>
+
+<div class="main-nav portal-links">
+    <a class="btn" href="https://identity.classter.com/ids/login?signin=61d87f25e58d64d2d1f0e46b6389f36e" target="_blank" rel="noopener">
+    Students Online System
+    </a>
+
+    <a class="btn" href="https://keycloak1.mcast.edu.mt/realms/mcast.edu.mt/protocol/openid-connect/auth?response_type=code&scope=email%20openid%20profile&client_id=wordpress&state=8d8eda9db0dddb43dda33e07c1b6f1e5&redirect_uri=https%3A%2F%2Fintranet.mcast.edu.mt%2Fopenid-connect-authorize" target="_blank" rel="noopener">
+    Staff Intranet
+    </a>
+</div>
+
+<section class="news-card-under">
+    <img src="Images\MCT_3448-Enhanced-NR-scaled.jpg" alt="MCAST Expo 25 event">
+
+    <a class="main-nav btn">View News</a>
+    </div>
+</section>
+
+
 
 
 <footer class="site-footer">
