--- a/institutes.html
+++ b/institutes.html
@@ -22,15 +22,49 @@
         <nav class="main-nav">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="institutes.html">Institutes</a></li>
+                <li><a href="institutes.html"class="active">Institutes</a></li>
                 <li><a href="courses.html">Browse Courses</a></li>
                 <li><a href="apply.html">How to Apply</a></li>
-                <li><a href="contact.html" class="active">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
 
         </nav>
 
     </header>
+
+    <section class="institutes-list">
+
+    <article class="institute-card">
+    <h3>Institute of Applied Sciences</h3>
+    <p>Offers scientific and technical education in laboratory, environmental and applied sciences.</p>
+    </article>
+    
+    <article class="institute-card">
+    <h3>Institute of Business Management & Commerce</h3>
+    <p>Covers business administration, accounting, marketing, retail and management studies.</p>
+    </article>
+
+    <article class="institute-card">
+    <h3>Institute for the Creative Arts</h3>
+    <p>Specialises in art, design, fashion, media and creative technologies.</p>
+    </article>
+
+    <article class="institute-card">
+    <h3>Institute of Community Services</h3>
+    <p>Provides training in health, social care, childcare and community-focused professions.</p>
+    </article>
+
+    <article class="institute-card">
+    <h3>Institute of Information & Communication Technology</h3>
+    <p>Provides courses in software development, networking, cybersecurity and digital technologies.</p>
+    </article>
+
+    <article class="institute-card">
+    <h3>Institute of Engineering & Transport</h3>
+    <p>Focuses on mechanical, electrical, automotive and industrial engineering disciplines.</p>
+    </article>
+
+</section>
 
     <footer class="site-footer">
     <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
