--- a/contact.html
+++ b/contact.html
@@ -6,15 +6,6 @@
 
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap" rel="stylesheet">
-    <title>MCAST - Get in Touch</title>
-</head>
-<body>
-    <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-
     <title>Contact Form</title>
 </head>
 <body>
@@ -60,7 +51,7 @@
         <h2>MCAST Main Campus</h2>
 
         <p><strong>Address:</strong><br>
-        Triq Kordin, Paola, Malta</p>
+        Triq Kordin, Paola, Malta, PLA9032</p>
 
         <p><strong>Phone:</strong><br>
         +356 2398 7100</p>
@@ -70,8 +61,7 @@
 
         <p><strong>Opening Hours:</strong><br>
         Mon - Fri: 8:00 - 16:00</p>
-    </div>
-
+        
     </div>
 
 </section>
