--- a/courses.html
+++ b/courses.html
@@ -23,14 +23,49 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="institutes.html">Institutes</a></li>
-                <li><a href="courses.html">Browse Courses</a></li>
+                <li><a href="courses.html"class="active">Browse Courses</a></li>
                 <li><a href="apply.html">How to Apply</a></li>
-                <li><a href="contact.html" class="active">Contact Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
 
         </nav>
 
     </header>
+
+<section class="course-details">
+
+  <article id="level1" class="detail-card">
+    <h2>Level 1 Courses</h2>
+    <p>Foundation programmes designed to introduce students to basic skills and learning methods.</p>
+  </article>
+
+  <article id="level2" class="detail-card">
+    <h2>Level 2 Courses</h2>
+    <p>Courses that build essential knowledge and practical skills for further study.</p>
+  </article>
+
+  <article id="level3" class="detail-card">
+    <h2>Level 3 Courses</h2>
+    <p>Diploma-level programmes preparing students for employment or higher education.</p>
+  </article>
+
+  <article id="level4" class="detail-card">
+    <h2>Level 4 Courses</h2>
+    <p>Advanced diploma courses focusing on specialised professional skills and industry readiness.</p>
+  </article>
+
+  <article id="level5" class="detail-card">
+    <h2>Level 5 Courses</h2>
+    <p>Higher diploma programmes aimed at advanced training and career progression.</p>
+  </article>
+
+  <article id="level6" class="detail-card">
+    <h2>Level 6 Courses</h2>
+    <p>Degree-level programmes offering in-depth academic and professional education.</p>
+  </article>
+
+</section>
+
 
     <footer class="site-footer">
     <p>MCAST Main Campus Triq Kordin Paola, Malta - PLA9032</p>
